[gd_scene load_steps=2 format=3 uid="uid://dhtnnutn80vaj"]

[ext_resource type="Script" path="res://scripts/presentation_overlay.gd" id="1_overlay"]

[node name="PresentationOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_overlay")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.05, 0.05, 0.9)

[node name="ScreenRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.8, 0.1, 0.1, 1)

[node name="TextContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="NarrationText" type="RichTextLabel" parent="TextContainer"]
layout_mode = 2
size_flags_vertical = 8
bbcode_enabled = true
fit_content = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
